se conecto a la base de datos

--- a/JavaApplication6/nbproject/project.properties
+++ b/JavaApplication6/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoGrupalULP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Villa\\Downloads\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mariadb-java-client-3.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javaapplication6.JavaApplication6
+main.class=javaapplication6.ProyectoGrupalULP
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
