--- a/JavaApplication6/.gitignore
+++ b/JavaApplication6/.gitignore
@@ -1,4 +1,4 @@
-/build/
-/test/
-/dist/
-/nbproject/private/
+JavaApplication6/build/
+JavaApplication6/test/
+JavaApplication6/dist/
+JavaApplication6/nbproject/private/
