--- a/JavaApplication6/nbproject/private/private.properties
+++ b/JavaApplication6/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Maxo Marto\\Desktop\\mariadb-java-client-3.0.11.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Maxo Marto\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Villa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
