--- a/JavaApplication6/nbproject/project.properties
+++ b/JavaApplication6/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Maxo Marto\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Villa\\Documents\\NetBeansProjects\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Villa\\Downloads\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
