--- a/JavaApplication6/nbproject/project.properties
+++ b/JavaApplication6/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javaapplication6.ProyectoGrupalULP
+main.class=Proyecto.Vistas.MenuPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
