--- a/JavaApplication6/nbproject/private/private.properties
+++ b/JavaApplication6/nbproject/private/private.properties
@@ -1,7 +1,9 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Maxo Marto\\Desktop\\mariadb-java-client-3.0.11.jar
+file.reference.jcalendar-1.4.jar=D:\\Program Files\\NetBeans 8.2\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=D:\\Program Files\\NetBeans 8.2\\jcalendar-1.4
+file.reference.mariadb-java-client-3.0.11.jar=D:\\Program Files\\NetBeans 8.2\\mariadb-java-client-3.0.11.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Villa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ivana\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
