--- a/JavaApplication6/nbproject/project.properties
+++ b/JavaApplication6/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Maxo Marto\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Villa\\Documents\\NetBeansProjects\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\GINO\\Documents\\NetBeansProjects\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Villa\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\Villa\\Downloads\\mariadb-java-client-3.0.11.jar
 includes=**
@@ -39,7 +40,8 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-1}
+    ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
