--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ JavaApplication6/dist/
 JavaApplication6/nbproject/private/
 JavaApplication6/nbproject/private/private.properties
 JavaApplication6/nbproject/private/private.xml
+JavaApplication6/nbproject/private/private.properties
