--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ JavaApplication6/nbproject/private/
 JavaApplication6/nbproject/private/private.properties
 JavaApplication6/nbproject/private/private.xml
 JavaApplication6/nbproject/private/private.properties
+*.properties
+JavaApplication6/nbproject/private/private.properties
+JavaApplication6/nbproject/private/private.xml
