--- a/JavaApplication6/nbproject/private/private.properties
+++ b/JavaApplication6/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.jcalendar-1.4.jar-1=D:\\Program Files\\NetBeans 8.2\\jcalendar-1.
 file.reference.mariadb-java-client-3.0.11.jar=D:\\Program Files\\NetBeans 8.2\\mariadb-java-client-3.0.11.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Villa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Maxo Marto\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
